# python-genai

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LLM.md  Mae.prompt.yml  Mayuim  PROPOSAL_O2_STRUCTURAL_PROMOTION.md  README.md  codegen_instructions.md  codegen_instructions.mdd  context7.json  fern_vs_stainless_breaking_changes.md  min_p_sampler.py  pyproject.toml  releases.txt  report1.md  report2.md  report3a.md  report3b.md  report3c.md  report4.md  requirements.txt  test_file_state_checking.py  test_video_file_fix.py
.devcontainer/: devcontainer.json
.github/: FU4NDING.yml  release-please.yml
.github/my-workspace-1/: README.md
.github/workflows/: ci.yml  codeql.yml  compat.yml  import.yml  mypy.yml  stale.yml
copilot-workspace/: README.md
copilot-workspace/projects/project1/: README.md  package.json
copilot-workspace/projects/project2/: README.md  package.json
copilot-workspace/templates/template1/: README.md  package.json
docs/: fern_integration.md  fern_vs_stainless_breaking_changes.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: genai.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: autodoc_pydantic.css  basic.css  doctools.js  language_data.js  pygments.css  searchtools.js  skeleton.css
examples/: modelgarden_example.py
google/genai/: CHANGELOG.md  __init__.py  _adapters.py  _api_client.py  _api_module.py  _automatic_function_calling_util.py  _base_url.py  _common.py  _extra_utils.py  _fallback.py  _interactions_wrapper.py  _live_converters.py  _local_tokenizer_loader.py  _mcp_utils.py  _operations_converters.py  _replay_api_client.py  _test_api_client.py  _tokens_converters.py  _transformers.py  batches.py  caches.py  chats.py  client.py  codegen_instructions.md  content_stream.py  documents.py  errors.py  file_search_stores.py  files.py  interactions.py  live.py  live_music.py  local_tokenizer.py  models.py  mypy.ini  operations.py  pagers.py  tokens.py  tunings.py  types.py  (+1 more)
google/genai/_fern_interactions/: __init__.py  _default_clients.py  client.py  environment.py  version.py
google/genai/_gaos/: _version.py  agents.py  basesdk.py  environments.py  google_genai.py  interactions.py  sdk.py  triggers.py  webhooks.py
google/genai/_interactions/: __init__.py  _base_client.py  _client.py  _client_adapter.py  _exceptions.py  _files.py  _legacy_lyria.py  _models.py  _qs.py  _types.py
google/genai/_migrate/: cli.py  codemod.py  mappings.py  visitors.py
google/genai/agentic/: __init__.py  contracts.py  criticality.py  loop.py  trajectory.py
google/genai/interactions/: __init__.py  _base_client.py  _client.py  _compat.py  _constants.py  _exceptions.py  _files.py  _models.py  _qs.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
google/genai/private/: __init__.py  _adapters.py  _api_client.py  _automatic_function_calling_util.py  (+24 more)
tests/: test_question_optimizer.py  test_transcript_processor.py
tests/migrate/: test_codemod.py
(+879 files in other folders)
