[build-system]
requires = ["setuptools", "wheel", "twine>=6.1.0", "packaging>=24.2", "pkginfo>=1.12.0"]

[project]
name = "google-genai"
version = "2.10.0"
description = "GenAI Python SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Google LLC", email = "googleapis-packages@google.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anyio>=4.8.0, <5.0.0",
    "google-auth[requests]>=2.48.1, <3.0.0",
    "httpx>=0.28.1, <1.0.0",
    "pydantic>=2.12.5, <3.0.0",
    "requests>=2.28.1, <3.0.0",
    "tenacity>=8.2.3, <9.2.0",
    "websockets>=13.0.0, <17.0",
    "typing-extensions>=4.14.0, <5.0.0",
    "distro>=1.7.0, <2",
    "sniffio",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.10.11, <4.0.0"]
local-tokenizer = [
    "sentencepiece>=0.2.0",
    "protobuf",
    "pillow",
    "torch",
    "torchvision",
    "transformers",
]
pyopenssl = ["pyopenssl"]

[project.urls]
Homepage = "https://github.com/googleapis/python-genai"

# Other [tool.setuptools] settings are in setup.cfg

[tool.setuptools.package-data]
"google.genai" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
exclude = ["tests/", "_test_api_client\\.py", "_gaos/"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]
# we are ignoring 'unused-ignore' because we run mypy on Python 3.9 - 3.13 and
# some errors in _automatic_function_calling_util.py only apply in 3.10+
# 'import-not-found' and 'import-untyped' are environment specific
disable_error_code = [
  "import-not-found",
  "import-untyped",
  "unused-ignore",
]
strict = true

pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.genai._gaos",
    "google.genai._gaos.*"
]
# Auto-generated code in _gaos has type errors; ignore them but keep type info
# for imports. This will only affect the _gaos module.
ignore_errors = true

# This particularly for interactions.py.
[[tool.mypy.overrides]]
module = "google.genai.interactions"
disable_error_code = [
    "misc",
    "assignment",
    # Intentionally overriding imported alias, runtime safe.
    "no-redef",
]

# Remove after the switch.
[[tool.mypy.overrides]]
module = [
    "google.genai._interactions",
    "google.genai._interactions.*"
]
# 'redundant-cast' is safe to ignore.
disable_error_code = [
  "redundant-cast",
]
implicit_reexport = true
